# engram

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
commands/: optimize.md  prune.md  recall.md  remember.md  status.md
demo/: README.md  demo.py  engram.tape
docs/: ARCHITECTURE.md  PITCH.md  PRUNING.md  PUBLISHING.md
examples/: team-settings.json
hooks/: hooks.json
scripts/: _entry.py  bench_recall.py  build_binary.sh  engram-launch
skills/howto/: SKILL.md
skills/optimize/: SKILL.md
skills/prune/: SKILL.md
skills/recall/: SKILL.md
skills/remember/: SKILL.md
skills/status/: SKILL.md
skills/why/: SKILL.md
src/engram/: __init__.py  cli.py  config.py  hookcli.py  server.py
src/engram/core/: __init__.py  capture.py  checkpoint.py  claudemd.py  consolidate.py  errors.py  eval.py  evalset.py  export.py  feedback.py  frontmatter.py  graph.py  ingest.py  maintenance.py  memory.py  migrate.py  (+18 more)
tests/: conftest.py  test_capture_incremental.py  test_config.py  test_consolidate.py  test_contradiction.py  test_eval.py  test_evals.py  test_feedback.py  test_graph_ingest_export.py  test_horizon_pruning.py  test_index_integrity.py  test_maintenance.py  test_memory.py  test_migrate.py  test_optimize.py  test_preferences.py  test_proactive.py  test_procedural.py  test_projects.py  test_prune.py  test_ranking.py  test_redact.py  test_repo_scope.py  test_robustness.py  test_roles.py  test_scoping.py  test_summarizer.py  test_working.py
(+13 files in other folders)
