[project]
name = "engram"
version = "0.4.0"
description = "A private, on-device memory layer for Claude Code — persistent, role-aware, graph-structured. Nothing leaves your laptop."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "mcp>=1.9.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "ruamel.yaml>=0.18",
    # Local, offline semantic recall (ONNX, no PyTorch). Pulled from PyPI at
    # install/first-run — never committed. The embedding model is pulled on first
    # use by fastembed. Together ~160 MB fetched once, then fully offline.
    "fastembed>=0.5",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
build = ["pyinstaller>=6"]

[project.scripts]
engram = "engram.cli:main"
engram-mcp = "engram.server:main"
engram-hook = "engram.hookcli:main"

# Role profiles can ship as separate packages via this entry-point group — a
# plug-n-play seam so new roles need no changes to this codebase.
#   [project.entry-points."engram.roles"]
#   sre = "my_pkg.role:SRERole"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
